--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
 	<h1>Screenshots</h1>
 
-	<img src="">
-	<img src="">
-	<img src="">
-	<img src="">
+	<img src="https://github.com/shourovfoisal/Graphics-Project/raw/gh-pages/Capture%201.PNG">
+	<img src="https://github.com/shourovfoisal/Graphics-Project/raw/gh-pages/Capture%202.PNG">
+	<img src="https://github.com/shourovfoisal/Graphics-Project/raw/gh-pages/Capture%203.PNG">
+	<img src="https://github.com/shourovfoisal/Graphics-Project/raw/gh-pages/Capture%204.PNG">
 </body>
 </html>
